--- a/getandpost.html
+++ b/getandpost.html
@@ -165,7 +165,7 @@
  <strong>In the route.ring we have this code</strong><br>  
     <pre style="background-color:yellow;">
 #!ring -cgi 
-load 'main/base.ring'
+load 'dragon-ring.ring'
 import system.Web
 app.route('testget',:ringfile,'testget.ring')</pre>
 
@@ -198,7 +198,7 @@ dring{
  <strong>In the route.ring we have this code</strong><br>  
     <pre style="background-color:yellow;">
 #!ring -cgi 
-load 'main/base.ring'
+load 'dragon-ring.ring'
 import system.Web
 app.route('testpost',:ringfile,'testpost.ring')</pre>
 
