--- a/template.html
+++ b/template.html
@@ -156,7 +156,7 @@
     <strong>In the route.ring we have this code</strong><br>  
     <pre style="background-color:yellow;">
 #!ring -cgi 
-load 'main/base.ring'
+load 'dragon-ring.ring'
 import system.Web
 app.route('HelloWorld',:ringfile,"hello.ring")</pre>
   <br>
@@ -222,7 +222,7 @@ dring{
     <strong>In the route.ring we have this code</strong><br>  
     <pre style="background-color:yellow;">
 #!ring -cgi 
-load 'main/base.ring'
+load 'dragon-ring.ring'
 import system.Web
 app.route('test_template',:ringfile,"test_template.ring")</pre>
   <br>
@@ -260,7 +260,7 @@ class test_template
     <strong>In the route.ring we have this code</strong><br>  
     <pre style="background-color:yellow;">
 #!ring -cgi 
-load 'main/base.ring'
+load 'dragon-ring.ring'
 import system.Web
 app.route('test_template',:ringfile,"test_template.ring")</pre>
   <br>
