--- a/useflash.html
+++ b/useflash.html
@@ -163,7 +163,7 @@
  <strong>In the route.ring we have this code</strong><br>  
     <pre style="background-color:yellow;">
 #!ring -cgi 
-load 'main/base.ring'
+load 'dragon-ring.ring'
 import system.Web
 app.route('testflash',:ringfile,'testflash.ring')</pre>
 
