--- a/controllers.html
+++ b/controllers.html
@@ -327,6 +327,11 @@ Hello Mohannad</pre>
   </script>
 
   
+  
+  <script type="text/javascript">
+    $('.mynav').load('nav.html');
+  </script>
+   
    
 
 </body>
