--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
   </script>
 
   <script type="text/javascript">
-    $('.mynav').load('nav.html')
+    $('.mynav').load('nav.html');
   </script>
    
 
