--- a/route.html
+++ b/route.html
@@ -283,6 +283,10 @@ class hello
   </script>
 
   
+  <script type="text/javascript">
+    $('.mynav').load('nav.html');
+  </script>
+   
    
 
 </body>
