--- a/template.html
+++ b/template.html
@@ -320,6 +320,10 @@ import system.Web
   </script>
 
   
+  <script type="text/javascript">
+    $('.mynav').load('nav.html');
+  </script>
+   
    
 
 </body>
