--- a/wwmysql.html
+++ b/wwmysql.html
@@ -257,6 +257,10 @@ mUPDATEDB('employees', 'id' , 1 ,table_columns, Table_values)</pre>
   </script>
 
   
+  <script type="text/javascript">
+    $('.mynav').load('nav.html');
+  </script>
+   
    
 
 </body>
