--- a/getandpost.html
+++ b/getandpost.html
@@ -268,6 +268,10 @@ this function can be used with post and get but you have to use it with POST bec
       });
   </script>
 
+  <script type="text/javascript">
+    $('.mynav').load('nav.html');
+  </script>
+   
   
    
 
