--- a/controllers.html
+++ b/controllers.html
@@ -44,7 +44,7 @@
 <body class="wy-body-for-nav">
 
 
-             <div class="mynav">
+             <div class="mynav wy-nav-side">
                
              </div>
 
@@ -289,7 +289,7 @@ Hello Mohannad</pre>
   
   
   <script type="text/javascript">
-    $('.mynav').load('nav.html');
+    $('.mynav wy-nav-side').load('nav.html');
   </script>
    
    
