--- a/getandpost.html
+++ b/getandpost.html
@@ -44,7 +44,7 @@
 
    
   <div class="wy-grid-for-nav">
-         <div class="mynav">
+         <div class="mynav wy-nav-side">
                
              </div>
 
@@ -229,7 +229,7 @@ this function can be used with post and get but you have to use it with POST bec
   </script>
 
   <script type="text/javascript">
-    $('.mynav').load('nav.html');
+    $('.mynav wy-nav-side').load('nav.html');
   </script>
    
   
