--- a/route.html
+++ b/route.html
@@ -44,7 +44,7 @@
 
    
   <div class="wy-grid-for-nav">
-        <div class="mynav">
+        <div class="mynav wy-nav-side">
                
              </div>
 
@@ -235,7 +235,7 @@ class hello
 
   
   <script type="text/javascript">
-    $('.mynav').load('nav.html');
+    $('.mynav wy-nav-side').load('nav.html');
   </script>
    
    
