--- a/template.html
+++ b/template.html
@@ -44,7 +44,7 @@
 
    
   <div class="wy-grid-for-nav">
-         <div class="mynav">
+         <div class="mynav wy-nav-side">
                
              </div>
 
@@ -271,7 +271,7 @@ import system.Web
 
   
   <script type="text/javascript">
-    $('.mynav').load('nav.html');
+    $('.mynav wy-nav-side').load('nav.html');
   </script>
    
    
