--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
    
   <div class="wy-grid-for-nav">
-       <div class="mynav">
+       <div class="mynav wy-nav-side">
                
              </div>
 
@@ -145,7 +145,7 @@
   </script>
 
   <script type="text/javascript">
-    $('.mynav').load('nav.html');
+    $('.mynav wy-nav-side').load('nav.html');
   </script>
    
 
