--- a/useflash.html
+++ b/useflash.html
@@ -44,7 +44,7 @@
 
    
   <div class="wy-grid-for-nav">
-        <div class="mynav">
+        <div class="mynav wy-nav-side">
                
              </div>
 
@@ -185,7 +185,7 @@ dring{
   
    
   <script type="text/javascript">
-    $('.mynav').load('nav.html');
+    $('.mynav wy-nav-side').load('nav.html');
   </script>
    
 
