--- a/controllers.html
+++ b/controllers.html
@@ -44,7 +44,7 @@
 <body class="wy-body-for-nav">
 
 
-             <div class="mynav wy-nav-side">
+             <div class="mynav">
                
              </div>
 
