--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
   </script>
 
   <script type="text/javascript">
-    $('.mynav wy-nav-side').load('nav.html');
+    $('.mynav').load('nav.html');
   </script>
    
 
