--- a/index.html
+++ b/index.html
@@ -89,7 +89,10 @@
           <a href="#">Dragon-Ring</a>
         
       </nav>
-
+<script type="text/javascript">
+    $('.mynav').load('nav.html');
+  </script>
+   
 
       <div class="wy-nav-content">
         
