--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
            <div itemprop="articleBody">
             
   <div class="section" id="welcome-to-read-the-docs">
-    Index Page
+    Welcome to the "Dragon-Ring" Web Framework Documentation.
 </div>
 
 
