--- a/index.html
+++ b/index.html
@@ -123,7 +123,26 @@
 <hr />
 <h3>How to install ?</h3>
  <strong>(1) Use this command for installation:-</strong>
- <pre> ringpm install dragonframework from mohannad-aldulaimi</pre>
+ <pre> ringpm install dragonframework from mohannad-aldulaimi</pre><br>
+ <strong>(2) Run The Dragon-Ring installation:-</strong>
+ <pre>ringpm run dragonframework</pre><br>
+<strong>(3) Create a new file for example 'test.ring'</strong>
+<strong>(4) Write this Code in the file 'test.ring' :-</strong>
+<pre>load 'dragon-ring.ring'
+getstartedwithdragonring() </pre><br>
+<strong>(5) Run the file Using RingNotePad or by using this command :-</strong>
+<pre>ring test.ring</pre><br>
+<h3>Run:-</h3>
+<strong>To run just use this command :-</strong>
+<pre>ring manage.ring run</pre><br>
+<h3>What Is New:-</h3>
+<strong>alpha Version 1.0.2</strong>
+<pre>1. Add manage.ring so that you can manage your project easily.
+  2. Add [run] command to control the server :-
+    * run:startserver
+    * run:stopserver
+    * run:restartserver 
+  3. Add the ability to run the project from any path without Ring notepad or Xampp or Apache [only for windows]</pre>
 <br>
 <br>
 <br>
