--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ getstartedwithdragonring() </pre><br>
 <pre>ring manage.ring run</pre><br>
 <h3>What Is New:-</h3>
 <strong>alpha Version 1.0.2</strong>
-<pre>1. Add manage.ring so that you can manage your project easily.
+<pre style="background-color:#fff !important;">1. Add manage.ring so that you can manage your project easily.
   2. Add [run] command to control the server :-
     * run:startserver
     * run:stopserver
