--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@ getstartedwithdragonring() </pre><br>
     * run:startserver
     * run:stopserver
     * run:restartserver 
-  3. Add the ability to run the project from any path without Ring notepad or Xampp or Apache [only for windows]</pre>
+  3. Add the ability to run the project from any path without Ring notepad 
+  or Xampp or Apache [only for windows]</pre>
 <br>
 <br>
 <br>
