--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
  <pre> ringpm install dragonframework from mohannad-aldulaimi</pre><br>
  <strong>(2) Run The Dragon-Ring installation:-</strong>
  <pre>ringpm run dragonframework</pre><br>
-<strong>(3) Create a new file for example 'test.ring'</strong><br>
+<strong>(3) Create a new file for example 'test.ring'</strong><br><br>
 <strong>(4) Write this Code in the file 'test.ring' :-</strong>
 <pre>load 'dragon-ring.ring'
 getstartedwithdragonring() </pre><br>
