adding Urls Controlling document

--- a/nav.html
+++ b/nav.html
@@ -20,6 +20,9 @@
                   <li>
                   <a href='getandpost.html'>(6) GET and POST</a>
                   </li>
+                  <li>
+                  <a href='urlscontrolling.html'>(7) Urls Controlling</a>
+                  </li>
                 </ul>
 
               </div>
