--- a/urlscontrolling.html
+++ b/urlscontrolling.html
@@ -161,15 +161,13 @@ dring{
   </code><br>
 <strong>In the website/templates/testurls.html we have this code</strong><br>
   <code style="width:100% .section;">
-<pre style="background-color:yellow;">{%=showflash()%}
-  &lt;div class='justify-content-center'&gt;
+<pre style="background-color:yellow;"> &lt;div class='justify-content-center'&gt;
     &lt;a class="btn btn-primary" href="{%=url_for('TestUrls2')%}"&gt;Go to TestUrls2 Page&lt;/a&gt;
   &lt;/div&gt;</pre>
   </code><br>
   <strong>In the website/templates/testurls2.html we have this code</strong><br>
   <code style="width:100% .section;">
-<pre style="background-color:yellow;">{%=showflash()%}
-  &lt;div class='justify-content-center'&gt;
+<pre style="background-color:yellow;">&lt;div class='justify-content-center'&gt;
     &lt;a class="btn btn-primary" href="{%=url_for('TestUrls')%}"&gt;Go to TestUrls Page&lt;/a&gt;
   &lt;/div&gt;</pre>
   </code><br>
