--- a/urlscontrolling.html
+++ b/urlscontrolling.html
@@ -105,7 +105,7 @@
   <ul class="wy-breadcrumbs">
     
       <li><a href="#" class="icon icon-home"></a> &raquo;</li>
-      <li>Using Flashs</li>
+      <li>Urls Controlling</li>
   </ul>
 
   
