--- a/nav.html
+++ b/nav.html
@@ -23,6 +23,9 @@
                   <li>
                   <a href='urlscontrolling.html'>(7) Urls Controlling</a>
                   </li>
+                  <li>
+                    <a href='wwithpg.html'>(8) Working With PostgreSql</a>
+                    </li>
                 </ul>
 
               </div>
