--- a/index.html
+++ b/index.html
@@ -121,21 +121,30 @@
     Welcome to the "Dragon-Ring" Web Framework Documentation.
 </div>
 <hr />
-<h3>How to install ?</h3>
- <strong>(1) Use this command for installation:-</strong>
- <pre> ringpm install dragonframework from mohannad-aldulaimi</pre><br>
- <strong>(2) Run The Dragon-Ring installation:-</strong>
- <pre>ringpm run dragonframework</pre><br>
-<strong>(3) Create a new file for example 'test.ring'</strong><br><br>
-<strong>(4) Write this Code in the file 'test.ring' :-</strong>
-<pre>load 'dragon-ring.ring'
-getstartedwithdragonring() </pre><br>
-<strong>(5) Run the file Using RingNotePad or by using this command :-</strong>
-<pre>ring test.ring</pre><br>
-<h3>Run:-</h3>
-<strong>To run just use this command :-</strong>
-<pre>ring manage.ring run</pre><br>
-<h3>What Is New:-</h3>
+<h3>How to install ?</h3> <br>
+ <strong><a href="https://github.com/mohannad-aldulaimi/dragonframework#install-from-ringpm-">Click here To install </a></strong>
+ <h3>What Is New:-</h3>
+ 
+<strong>alpha Version 1.0.4</strong>
+<pre style="background-color:#fff !important;">1. Add the ability to create projects using command line .
+  2. Add PostGreSql database extention with many useful functions.
+  3. Cookies Errors fixed.
+  4. weblib tempates (better code).
+  5. Add route2 function .
+  6. Error 404 Page (better code to be faster).
+  7. Auto Error Avoiding during execute files (if any error occurred on page it will return error 404 page not found (during the executing) not on code error).
+  8. Made the Page executing more faster .
+  9. updating the bootstrap and J-Query files.
+  10. Showflash() function (better code).
+  11. Add Get_Flashed_Messages() function.
+  12. Add (dangerous) Class for Flash messages.
+  13. Add 'Working With PostgreSql' document.
+  14. Add Employees example.
+  15. Add Login&signup example.
+  </pre>
+<br>
+<br>
+<br>
 <strong>alpha Version 1.0.2</strong>
 <pre style="background-color:#fff !important;">1. Add manage.ring so that you can manage your project easily.
 2. Add [run] command to control the server :-
