Update the index page

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 </div>
 <hr />
 <h3>How to install ?</h3> <br>
- <strong><a href="https://github.com/mohannad-aldulaimi/dragonframework#install-from-ringpm-">Click here To install </a></strong>
+ <strong><a href="https://github.com/mohannad-aldulaimi/dragonframework#install-from-ringpm-" target="_blank">Click here To install </a></strong>
  <h3>What Is New:-</h3>
  
 <strong>alpha Version 1.0.4</strong>
