Update the index page

--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
 4. weblib tempates (better code).
 5. Add route2 function .
 6. Error 404 Page (better code to be faster).
-7. Auto Error Avoiding during execute files (if any error occurred on page it will return error 404 page not found (during the executing) not on code error).
+7. Auto Error Avoiding during execute files (if any error occurred on page
+it will return error 404 page not found (during the executing) not on code error).
 8. Made the Page executing more faster .
 9. updating the bootstrap and J-Query files.
 10. Showflash() function (better code).
