--- a/nav.html
+++ b/nav.html
@@ -1,5 +1,34 @@
-  
-
+  <style>
+@import url('https://fonts.googleapis.com/css2?family=Mali:wght@600&display=swap');
+    @media screen and (max-width: 480px) {
+    pre {
+        width:100% !important;
+      //  font-size: 3VW !important;
+    }
+    }
+    .Ex-f,code,pre {
+    font-size:20 px !important;
+    overflow: auto !important;
+    font-family: 'Mali', cursive !important;
+    }
+    pre{
+    white-space: pre-wrap !important;
+	}
+  .wy-side-scroll,.wy-nav-side{
+    background-color: black !important;
+  }
+  .icon img{
+      width: 50% !important;
+      height: 50% !important;
+      margin-bottom: -50% !important;
+      background-color: black !important;
+  }
+  .version{
+    font-family: 'Mali', cursive !important;
+    padding-top: -5% !important;
+    z-index: 10 !important;
+  }
+  </style>
  <div class="local-toc">
                 <ul>
                   <li>
@@ -26,6 +55,9 @@
                   <li>
                     <a href='wwithpg.html'>(8) Working With PostgreSql</a>
                     </li>
+                    <li>
+                      <a href='wwsqlite.html'>(9) Working With Sqlite</a>
+                      </li>
                 </ul>
 
               </div>
