--- a/nav.html
+++ b/nav.html
@@ -59,7 +59,8 @@
                       <a href='wwsqlite.html'>(9) Working With Sqlite</a>
                       </li>
                 </ul>
-
+                <h5 style="padding-top:5VW !important;  font-family: 'Mali', cursive !important;
+                ">Made By:-(Ph And Developer) <br>Mohannad Al-Ayashi Al-Dulaimi</h5>
               </div>
           
 
